--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,7 +25,7 @@
   <link rel="stylesheet" href="/js/highlightjs/styles/ssms.css" />
 
   <script type="text/javascript" src="/js/highlightjs/highlight.min.js"></script>
-
+  <script src="/js/highlightjs/archive.js"></script>
   <script type="text/javascript" src="/js/highlightjs/languages/plaintext.min.js"></script>
   <script type="text/javascript" src="/js/highlightjs/languages/powershell.min.js"></script>
   <script type="text/javascript" src="/js/highlightjs/languages/tsql.min.js"></script>
